プライスページ追加

--- a/src/price-page.html
+++ b/src/price-page.html
@@ -67,7 +67,7 @@
             </li>
           </ul>
         </nav>
-        <div class="header__hamburger-layout  md-show">
+        <div class="header__hamburger-layout md-show">
           <div class="header__hamburger js-hamburger">
             <span></span>
             <span></span>
@@ -173,11 +173,107 @@
           <span>
             <a href="./"><span>TOP</span></a>
           </span>
-          <span>ダイビング情報</span>
+          <span>料金一覧</span>
         </div>
       </div>
+      <!--プライス-->
+      <section id="price-page" class="price-page price-page-top">
+        <div class="price-page__inner inner">
+          <div class="price-page__items">
+            <div class="price-page__items-item price-page-item">
+              <table class="price-page-item__box price-page-box">
+                <tr>
+                  <th class="price-page-box__head-sp" colspan="2">ライセンス講習</th>
+                </tr>
+                <tr>
+                  <th class="price-page-box__head-pc" rowspan="3">ライセンス講習</th>
+                  <td class="price-page-box__name">オープンウォーター<br class="md-show" />ダイバーコース</td>
+                  <td class="price-page-box__price">¥50,000</td>
+                </tr>
+                <tr>
+                  <td class="price-page-box__name">アドバンスド<br class="md-show" />オープンウォーターコース</td>
+                  <td class="price-page-box__price">¥60,000</td>
+                </tr>
+                <tr>
+                  <td class="price-page-box__name">レスキュー＋EFRコース</td>
+                  <td class="price-page-box__price">¥70,000</td>
+                </tr>
+              </table>
+            </div>
+            <div class="price-page__items-item price-page-item">
+              <table class="price-page-item__box price-page-box">
+                <tr>
+                  <th class="price-page-box__head-sp" colspan="2">体験ダイビング</th>
+                </tr>
+                <tr>
+                  <th class="price-page-box__head-pc-long" rowspan="4">体験ダイビング</th>
+                  <td class="price-page-box__name">ビーチ体験ダイビング<br class="md-show" />(半日)</td>
+                  <td class="price-page-box__price">¥7,000</td>
+                </tr>
+                <tr>
+                  <td class="price-page-box__name">ビーチ体験ダイビング<br class="md-show" />(1日)</td>
+                  <td class="price-page-box__price">¥14,000</td>
+                </tr>
+                <tr>
+                  <td class="price-page-box__name">ボート体験ダイビング<br class="md-show" />(半日)</td>
+                  <td class="price-page-box__price">¥10,000</td>
+                </tr>
+                <tr>
+                  <td class="price-page-box__name">ボート体験ダイビング<br class="md-show" />(1日)</td>
+                  <td class="price-page-box__price">¥18,000</td>
+                </tr>
+              </table>
+            </div>
+            <div class="price-page__items-item price-page-item">
+              <table class="price-page-item__box price-page-box">
+                <tr>
+                  <th class="price-page-box__head-sp-middle" colspan="2">ファンダイビング</th>
+                </tr>
+                <tr>
+                  <th class="price-page-box__head-pc-long" rowspan="4">ファンダイビング</th>
+                  <td class="price-page-box__name">ビーチダイビング<br class="md-show" />(2ダイブ)</td>
+                  <td class="price-page-box__price">¥14,000</td>
+                </tr>
+                <tr>
+                  <td class="price-page-box__name">ボートダイビング<br class="md-show" />(2ダイブ)</td>
+                  <td class="price-page-box__price">¥18,000</td>
+                </tr>
+                <tr>
+                  <td class="price-page-box__name">スペシャルダイビング<br class="md-show" />(2ダイブ)</td>
+                  <td class="price-page-box__price">¥24,000</td>
+                </tr>
+                <tr>
+                  <td class="price-page-box__name">ナイトダイビング<br class="md-show" />(1ダイブ)</td>
+                  <td class="price-page-box__price">¥18,000</td>
+                </tr>
+              </table>
+            </div>
+            <div class="price-page__items-item price-page-item">
+              <table class="price-page-item__box price-page-box">
+                <tr>
+                  <th class="price-page-box__head-sp-last" colspan="2">スペシャルダイビング</th>
+                </tr>
+                <tr>
+                  <th class="price-page-box__head-pc" rowspan="4">スペシャルダイビング</th>
+
+                  <td class="price-page-box__name">貸切ダイビング<br class="md-show" />(2ダイブ)</td>
+                  <td class="price-page-box__price">¥24,000</td>
+                </tr>
+                <tr>
+                  <td class="price-page-box__name">1日ダイビング<br class="md-show" />(3ダイブ)</td>
+                  <td class="price-page-box__price">¥32,000</td>
+                </tr>
+                <tr>
+                  <td class="price-page-box__name">ナイトダイビング<br class="md-show" />(2ダイブ)</td>
+                  <td class="price-page-box__price">¥14,000</td>
+                </tr>
+              </table>
+            </div>
+          </div>
+        </div>
+      </section>
       <!--コンタクト-->
-      <section id="contact" class="contact contact-about-top">
+      <section id="contact" class="contact contact-price-top">
         <div class="contact__inner inner">
           <div class="contact__container">
             <div class="contact__box contact-box">
@@ -251,7 +347,7 @@
             <a href="#" target="_blank" class="footer-title__facebook-logo">
               <img src="./assets/images/facebook-logo.svg" alt="facebook" />
             </a>
-            <a href="#" target="_blank"  class="footer-title__instagram-logo">
+            <a href="#" target="_blank" class="footer-title__instagram-logo">
               <img src="./assets/images/insta-logo.svg" alt="instagram" />
             </a>
           </div>
