faqページ追加

--- a/src/campaign-page.html
+++ b/src/campaign-page.html
@@ -60,7 +60,7 @@
               <a class="header__link" href="price-page.html"><span>Price</span>料金一覧</a>
             </li>
             <li class="header__item">
-              <a class="header__link" href="#"><span>FAQ</span>よくある質問</a>
+              <a class="header__link" href="faq-page.html"><span>FAQ</span>よくある質問</a>
             </li>
             <li class="header__item">
               <a class="header__link" href="#"><span>Contact</span>お問合せ</a>
@@ -127,7 +127,7 @@
                 </ul>
                 <ul class="drawer-menu__items-bottom">
                   <li class="drawer-menu__item">
-                    <a href="#" class="drawer-menu__link-a">
+                    <a href="faq-page.html" class="drawer-menu__link-a">
                       <p class="drawer__logo-text">よくある質問</p>
                     </a>
                   </li>
@@ -179,12 +179,12 @@
       <!--タブ-->
       <div class="campaign-page-tab campaign-page-tab-top">
         <div class="campaign-page-tab__inner inner">
-          <ul class="campaign-page-tab__items campaign-tab">
-            <li class="campaign-tab__item is-color"><a href="#">ALL</a></li>
-            <li class="campaign-tab__item"><a href="#">ライセンス講習</a></li>
-            <li class="campaign-tab__item"><a href="#">ファンダイビング</a></li>
-            <li class="campaign-tab__item"><a href="#">体験ダイビング</a></li>
-          </ul>
+          <div class="campaign-page-tab__items campaign-tab">
+            <a href="#" class="campaign-tab__item is-color">ALL</a>
+            <a href="#" class="campaign-tab__item">ライセンス講習</a>
+            <a href="#" class="campaign-tab__item">ファンダイビング</a>
+            <a href="#" class="campaign-tab__item">体験ダイビング</a>
+          </div>
         </div>
       </div>
       <!--コンテンツ-->
@@ -451,7 +451,7 @@
             </ul>
             <ul class="footer-menu__items-b">
               <li class="footer-menu__item">
-                <a href="#" class="footer-menu__link-a">
+                <a href="faq-page.html" class="footer-menu__link-a">
                   <p class="footer-menu__logo-text">よくある質問</p>
                 </a>
               </li>
