--- a/src/voice-page.html
+++ b/src/voice-page.html
@@ -60,7 +60,7 @@
               <a class="header__link" href="price-page.html"><span>Price</span>料金一覧</a>
             </li>
             <li class="header__item">
-              <a class="header__link" href="#"><span>FAQ</span>よくある質問</a>
+              <a class="header__link" href="faq-page.html"><span>FAQ</span>よくある質問</a>
             </li>
             <li class="header__item">
               <a class="header__link" href="#"><span>Contact</span>お問合せ</a>
@@ -127,7 +127,7 @@
                 </ul>
                 <ul class="drawer-menu__items-bottom">
                   <li class="drawer-menu__item">
-                    <a href="#" class="drawer-menu__link-a">
+                    <a href="faq-page.html" class="drawer-menu__link-a">
                       <p class="drawer__logo-text">よくある質問</p>
                     </a>
                   </li>
@@ -179,12 +179,12 @@
       <!--タブ-->
       <div class="voice-page-tab voice-page-tab-top">
         <div class="voice-page-tab__inner inner">
-          <ul class="voice-page-tab__items campaign-tab">
-            <li class="campaign-tab__item is-color"><a href="#">ALL</a></li>
-            <li class="campaign-tab__item"><a href="#">ライセンス講習</a></li>
-            <li class="campaign-tab__item"><a href="#">ファンダイビング</a></li>
-            <li class="campaign-tab__item"><a href="#">体験ダイビング</a></li>
-          </ul>
+          <div class="campaign-page-tab__items campaign-tab">
+            <a href="#" class="campaign-tab__item is-color">ALL</a>
+            <a href="#" class="campaign-tab__item">ライセンス講習</a>
+            <a href="#" class="campaign-tab__item">ファンダイビング</a>
+            <a href="#" class="campaign-tab__item">体験ダイビング</a>
+          </div>
         </div>
       </div>
       <!--コンテンツ-->
@@ -330,17 +330,17 @@
               </div>
             </div>
           </div>
-          <div class="pagination-voice pagination-voice-top">
-            <div class="pagination-voice__inner inner">
-              <div class="pagination-voice__nav">
-                <a class="pagination-voice__prev" href="#"></a>
-                <span class="pagination-voice__current">1</span>
+          <div class="voice-page__pagination voice-page-pagination-top pagination">
+            <div class="pagination__inner inner">
+              <div class="pagination__nav">
+                <a class="pagination__prev" href="#"></a>
+                <span class="pagination__current">1</span>
                 <a class="page larger" href="#">2</a>
                 <a class="page larger" href="#">3</a>
                 <a class="page larger" href="#">4</a>
                 <a class="page larger md-none" href="#">5</a>
                 <a class="page larger md-none" href="#">6</a>
-                <a class="pagination-voice__next" href="#"></a>
+                <a class="pagination__next" href="#"></a>
               </div>
             </div>
           </div>
@@ -477,7 +477,7 @@
             </ul>
             <ul class="footer-menu__items-b">
               <li class="footer-menu__item">
-                <a href="#" class="footer-menu__link-a">
+                <a href="faq-page.html" class="footer-menu__link-a">
                   <p class="footer-menu__logo-text">よくある質問</p>
                 </a>
               </li>
