--- a/src/blog-page.html
+++ b/src/blog-page.html
@@ -60,7 +60,7 @@
               <a class="header__link" href="price-page.html"><span>Price</span>料金一覧</a>
             </li>
             <li class="header__item">
-              <a class="header__link" href="#"><span>FAQ</span>よくある質問</a>
+              <a class="header__link" href="faq-page.html"><span>FAQ</span>よくある質問</a>
             </li>
             <li class="header__item">
               <a class="header__link" href="#"><span>Contact</span>お問合せ</a>
@@ -127,7 +127,7 @@
                 </ul>
                 <ul class="drawer-menu__items-bottom">
                   <li class="drawer-menu__item">
-                    <a href="#" class="drawer-menu__link-a">
+                    <a href="faq-page.html" class="drawer-menu__link-a">
                       <p class="drawer__logo-text">よくある質問</p>
                     </a>
                   </li>
@@ -607,7 +607,7 @@
             </ul>
             <ul class="footer-menu__items-b">
               <li class="footer-menu__item">
-                <a href="#" class="footer-menu__link-a">
+                <a href="faq-page.html" class="footer-menu__link-a">
                   <p class="footer-menu__logo-text">よくある質問</p>
                 </a>
               </li>
