ブログ詳細修正

--- a/src/blog-page-detail.html
+++ b/src/blog-page-detail.html
@@ -190,18 +190,14 @@
                   <h2 class="blog-detail-card__text">ライセンス取得</h2>
                 </div>
                 <div class="blog-page-detail-cards__item-container">
-                  <div class="blog-page-detail-cards__item-box blog-detail-card">
-                    <div class="blog-detail-card__img">
-                      <img src="./assets/images/blog-img2.jpg" alt="海底にカラフルなイソギンチャクが生えている様子" />
-                    </div>
-                    <p>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
-                  </div>
-                  <div class="blog-page-detail-cards__item-box blog-detail-card">
-                    <div class="blog-detail-card__img">
-                      <img src="./assets/images/blog-img2.jpg" alt="海底にカラフルなイソギンチャクが生えている様子" />
-                    </div>
-                    <p>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
-                  </div>
+                  <figure>
+                    <img src="./assets/images/blog-img2.jpg" alt="海底にカラフルなイソギンチャクが生えている様子" />
+                  </figure>
+                  <p>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
+                  <figure>
+                    <img src="./assets/images/blog-img2.jpg" alt="海底にカラフルなイソギンチャクが生えている様子" />
+                  </figure>
+                  <p>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
                   <ul>
                     <li>リスト１</li>
                     <li>リスト２</li>
