--- a/src/faq-page.html
+++ b/src/faq-page.html
@@ -176,7 +176,35 @@
           <span>よくある質問</span>
         </div>
       </div>
-      <!--プライス-->
+      <!--アコーディオン-->
+      <div class="accordion js-accordion">
+        <div class="accordion__container">
+          <div class="accordion__item js-accordion__item">
+            <h3 class="accordion__title js-accordion__title">
+              ここに質問が入ります。
+            </h3>
+            <div class="accordion__content js-accordion__content">
+              <p class="accordion__text">コンテンツ1</p>
+            </div>
+          </div>
+          <div class="accordion__item js-accordion__item">
+            <h3 class="accordion__title js-accordion__title">
+              タイトル2
+            </h3>
+            <div class="accordion__content js-accordion__content">
+              <p class="accordion__text">コンテンツ2</p>
+            </div>
+          </div>
+          <div class="accordion__item js-accordion__item">
+            <h3 class="accordion__title js-accordion__title">
+              タイトル3
+            </h3>
+            <div class="accordion__content js-accordion__content">
+              <p class="accordion__text">コンテンツ3</p>
+            </div>
+          </div>
+        </div>
+      </div>
 
       <!--コンタクト-->
       <section id="contact" class="contact contact-price-top">
