--- a/src/faq-page.html
+++ b/src/faq-page.html
@@ -177,37 +177,71 @@
         </div>
       </div>
       <!--アコーディオン-->
-      <div class="accordion js-accordion">
-        <div class="accordion__container">
-          <div class="accordion__item js-accordion__item">
-            <h3 class="accordion__title js-accordion__title">
-              ここに質問が入ります。
-            </h3>
-            <div class="accordion__content js-accordion__content">
-              <p class="accordion__text">コンテンツ1</p>
+      <div class="faq-page__accordion faq-page-accordion faq-page-accordion-top js-accordion">
+        <div class="faq-page-accordion__inner inner">
+          <div class="faq-page-accordion__container">
+            <div class="faq-page-accordion__item js-faq-page-accordion__item">
+              <h3 class="faq-page-accordion__title js-faq-page-accordion__title">
+                ここに質問が入ります。
+              </h3>
+              <div class="faq-page-accordion__content js-faq-page-accordion__content">
+                <p class="faq-page-accordion__text">ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります</p>
+              </div>
             </div>
-          </div>
-          <div class="accordion__item js-accordion__item">
-            <h3 class="accordion__title js-accordion__title">
-              タイトル2
-            </h3>
-            <div class="accordion__content js-accordion__content">
-              <p class="accordion__text">コンテンツ2</p>
+            <div class="faq-page-accordion__item js-faq-page-accordion__item">
+              <h3 class="faq-page-accordion__title js-faq-page-accordion__title">
+                ここに質問が入ります。
+              </h3>
+              <div class="faq-page-accordion__content js-faq-page-accordion__content">
+                <p class="faq-page-accordion__text">ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります</p>
+              </div>
             </div>
-          </div>
-          <div class="accordion__item js-accordion__item">
-            <h3 class="accordion__title js-accordion__title">
-              タイトル3
-            </h3>
-            <div class="accordion__content js-accordion__content">
-              <p class="accordion__text">コンテンツ3</p>
+            <div class="faq-page-accordion__item js-faq-page-accordion__item">
+              <h3 class="faq-page-accordion__title js-faq-page-accordion__title">
+                ここに質問が入ります。
+              </h3>
+              <div class="faq-page-accordion__content js-faq-page-accordion__content">
+                <p class="faq-page-accordion__text">ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります</p>
+              </div>
+            </div>
+            <div class="faq-page-accordion__item js-faq-page-accordion__item">
+              <h3 class="faq-page-accordion__title js-faq-page-accordion__title">
+                ここに質問が入ります。
+              </h3>
+              <div class="faq-page-accordion__content js-faq-page-accordion__content">
+                <p class="faq-page-accordion__text">ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります</p>
+              </div>
+            </div>
+            <div class="faq-page-accordion__item js-faq-page-accordion__item">
+              <h3 class="faq-page-accordion__title js-faq-page-accordion__title">
+                ここに質問が入ります。
+              </h3>
+              <div class="faq-page-accordion__content js-faq-page-accordion__content">
+                <p class="faq-page-accordion__text">ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります</p>
+              </div>
+            </div>
+            <div class="faq-page-accordion__item js-faq-page-accordion__item">
+              <h3 class="faq-page-accordion__title js-faq-page-accordion__title">
+                ここに質問が入ります。
+              </h3>
+              <div class="faq-page-accordion__content js-faq-page-accordion__content">
+                <p class="faq-page-accordion__text">ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります</p>
+              </div>
+            </div>
+            <div class="faq-page-accordion__item js-faq-page-accordion__item">
+              <h3 class="faq-page-accordion__title js-faq-page-accordion__title">
+                ここに質問が入ります。
+              </h3>
+              <div class="faq-page-accordion__content js-faq-page-accordion__content">
+                <p class="faq-page-accordion__text">ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります</p>
+              </div>
             </div>
           </div>
         </div>
       </div>
 
       <!--コンタクト-->
-      <section id="contact" class="contact contact-price-top">
+      <section id="contact" class="contact contact-faq-top">
         <div class="contact__inner inner">
           <div class="contact__container">
             <div class="contact__box contact-box">
