--- a/src/contact-page.html
+++ b/src/contact-page.html
@@ -159,11 +159,11 @@
       <section id="sub-page-mv" class="sub-page-mv">
         <div class="sub-page-mv__inner">
           <div class="sub-page-mv__title">
-            <h1 class="sub-page-mv__title-main page-section-title">Voice</h1>
+            <h1 class="sub-page-mv__title-main page-section-title">Contact</h1>
           </div>
           <picture class="sub-page-mv__picture">
-            <source srcset="./assets/images/voice-page-pc-img.jpg" media="(min-width: 768px)" />
-            <img src="./assets/images/voice-page-sp-img.jpg" alt="4人のダイバーが潜る前にプロの指導を受けている様子" />
+            <source srcset="./assets/images/contact-page-pc-img.jpg" media="(min-width: 768px)" />
+            <img src="./assets/images/contact-page-sp-img.jpg" alt="白い砂浜とエメラルドグリーンの海が広がっている様子" />
           </picture>
         </div>
       </section>
@@ -173,181 +173,14 @@
           <span>
             <a href="./"><span>TOP</span></a>
           </span>
-          <span>お客様の声</span>
+          <span>お問い合わせ</span>
         </div>
       </div>
-      <!--タブ-->
-      <div class="voice-page-tab voice-page-tab-top">
-        <div class="voice-page-tab__inner inner">
-          <div class="campaign-page-tab__items campaign-tab">
-            <a href="#" class="campaign-tab__item is-color">ALL</a>
-            <a href="#" class="campaign-tab__item">ライセンス講習</a>
-            <a href="#" class="campaign-tab__item">ファンダイビング</a>
-            <a href="#" class="campaign-tab__item">体験ダイビング</a>
-          </div>
-        </div>
-      </div>
-      <!--コンテンツ-->
-      <section id="voice-page" class="voice-page voice-page-top">
-        <div class="voice-page__inner inner">
-          <div class="voice-page__cards voice-cards">
-            <div class="voice-cards__item-box voice-card">
-              <div class="voice-card__item">
-                <div class="voice-card__container">
-                  <div class="voice-card__title-box">
-                    <div class="voice-card__title-box1">
-                      <p class="voice-card__title-sub">20代(女性)</p>
-                      <p class="voice-card__title">ライセンス講習</p>
-                    </div>
-                    <div class="voice-card__title-box2">
-                      <p class="voice-card__title-text">ここにタイトルが入ります。ここにタイトル</p>
-                    </div>
-                  </div>
-                  <div class="voice-card__img colorbox">
-                    <img src="./assets/images/voice-img1.jpg" alt="ベージュの帽子を被った笑顔の女性" />
-                  </div>
-                </div>
-                <div class="voice-card__text-box">
-                  <p class="voice-card__text-sub">
-                    ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="voice-cards__item-box voice-card">
-              <div class="voice-card__item">
-                <div class="voice-card__container">
-                  <div class="voice-card__title-box">
-                    <div class="voice-card__title-box1">
-                      <p class="voice-card__title-sub">20代(男性)</p>
-                      <p class="voice-card__title">ファンダイビング</p>
-                    </div>
-                    <div class="voice-card__title-box2">
-                      <p class="voice-card__title-text">ここにタイトルが入ります。ここにタイトル</p>
-                    </div>
-                  </div>
-                  <div class="voice-card__img colorbox">
-                    <img src="./assets/images/voice-img2.jpg" alt="グッドサインをした紺色のシャツを着た男性" />
-                  </div>
-                </div>
-                <div class="voice-card__text-box">
-                  <p class="voice-card__text-sub">
-                    ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="voice-cards__item-box voice-card">
-              <div class="voice-card__item">
-                <div class="voice-card__container">
-                  <div class="voice-card__title-box">
-                    <div class="voice-card__title-box1">
-                      <p class="voice-card__title-sub">30代(女性)</p>
-                      <p class="voice-card__title">体験ダイビング</p>
-                    </div>
-                    <div class="voice-card__title-box2">
-                      <p class="voice-card__title-text">ここにタイトルが入ります。ここにタイトル</p>
-                    </div>
-                  </div>
-                  <div class="voice-card__img colorbox">
-                    <img src="./assets/images/voice-img3.jpg" alt="眼鏡をかけた女性と金のネックレスをした女性" />
-                  </div>
-                </div>
-                <div class="voice-card__text-box">
-                  <p class="voice-card__text-sub">
-                    ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="voice-cards__item-box voice-card">
-              <div class="voice-card__item">
-                <div class="voice-card__container">
-                  <div class="voice-card__title-box">
-                    <div class="voice-card__title-box1">
-                      <p class="voice-card__title-sub">20代(女性)</p>
-                      <p class="voice-card__title">体験ダイビング</p>
-                    </div>
-                    <div class="voice-card__title-box2">
-                      <p class="voice-card__title-text">ここにタイトルが入ります。ここにタイトル</p>
-                    </div>
-                  </div>
-                  <div class="voice-card__img colorbox">
-                    <img src="./assets/images/voice-img4.jpg" alt="強風で髪の毛を押さえている女性" />
-                  </div>
-                </div>
-                <div class="voice-card__text-box">
-                  <p class="voice-card__text-sub">
-                    ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="voice-cards__item-box voice-card">
-              <div class="voice-card__item">
-                <div class="voice-card__container">
-                  <div class="voice-card__title-box">
-                    <div class="voice-card__title-box1">
-                      <p class="voice-card__title-sub">30代(カップル)</p>
-                      <p class="voice-card__title">ファンダイビング</p>
-                    </div>
-                    <div class="voice-card__title-box2">
-                      <p class="voice-card__title-text">ここにタイトルが入ります。ここにタイトル</p>
-                    </div>
-                  </div>
-                  <div class="voice-card__img colorbox">
-                    <img src="./assets/images/voice-img5.jpg" alt="腕を組んだ30代カップルがソファーに座っている様子" />
-                  </div>
-                </div>
-                <div class="voice-card__text-box">
-                  <p class="voice-card__text-sub">
-                    ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="voice-cards__item-box voice-card">
-              <div class="voice-card__item">
-                <div class="voice-card__container">
-                  <div class="voice-card__title-box">
-                    <div class="voice-card__title-box1">
-                      <p class="voice-card__title-sub">20代(女性)</p>
-                      <p class="voice-card__title">ライセンス講習</p>
-                    </div>
-                    <div class="voice-card__title-box2">
-                      <p class="voice-card__title-text">ここにタイトルが入ります。ここにタイトル</p>
-                    </div>
-                  </div>
-                  <div class="voice-card__img colorbox">
-                    <img src="./assets/images/voice-img6.jpg" alt="笑顔で白と紺色のボーダーシャツを着た女性" />
-                  </div>
-                </div>
-                <div class="voice-card__text-box">
-                  <p class="voice-card__text-sub">
-                    ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="voice-page__pagination voice-page-pagination-top pagination">
-            <div class="pagination__inner inner">
-              <div class="pagination__nav">
-                <a class="pagination__prev" href="#"></a>
-                <span class="pagination__current">1</span>
-                <a class="page larger" href="#">2</a>
-                <a class="page larger" href="#">3</a>
-                <a class="page larger" href="#">4</a>
-                <a class="page larger md-none" href="#">5</a>
-                <a class="page larger md-none" href="#">6</a>
-                <a class="pagination__next" href="#"></a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
+      <!--アコーディオン-->
+
+
       <!--コンタクト-->
-      <section id="contact" class="contact contact-campaign-top">
+      <section id="contact" class="contact contact-faq-top">
         <div class="contact__inner inner">
           <div class="contact__container">
             <div class="contact__box contact-box">
@@ -430,7 +263,7 @@
           <div class="footer-menu__left">
             <ul class="footer-menu__items-a">
               <li class="footer-menu__item">
-                <a href="campaign-page.html" class="footer-menu__link-a">
+                <a href="#" class="footer-menu__link-a">
                   <p class="footer-menu__logo-text">キャンペーン</p>
                 </a>
               </li>
@@ -438,14 +271,14 @@
               <li class="footer-menu__item-text"><a href="#">貸切体験ダイビング</a></li>
               <li class="footer-menu__item-text"><a href="#">ナイトダイビング</a></li>
               <li class="footer-menu__item">
-                <a href="aboutus-page.html" class="footer-menu__link-b">
+                <a href="#" class="footer-menu__link-b">
                   <p class="footer-menu__logo-text">私たちについて</p>
                 </a>
               </li>
             </ul>
             <ul class="footer-menu__items-b">
               <li class="footer-menu__item">
-                <a href="information-page.html" class="footer-menu__link-a">
+                <a href="#" class="footer-menu__link-a">
                   <p class="footer-menu__logo-text">ダイビング情報</p>
                 </a>
               </li>
