--- a/src/campaign-page.html
+++ b/src/campaign-page.html
@@ -63,7 +63,7 @@
               <a class="header__link" href="faq-page.html"><span>FAQ</span>よくある質問</a>
             </li>
             <li class="header__item">
-              <a class="header__link" href="#"><span>Contact</span>お問合せ</a>
+              <a class="header__link" href="contact-page.html"><span>Contact</span>お問合せ</a>
             </li>
           </ul>
         </nav>
@@ -142,7 +142,7 @@
                     </a>
                   </li>
                   <li class="drawer-menu__item">
-                    <a href="#" class="drawer-menu__link-b">
+                    <a href="contact-page.html" class="drawer-menu__link-b">
                       <p class="drawer__logo-text">お問い合わせ</p>
                     </a>
                   </li>
@@ -369,7 +369,7 @@
                 <h2 class="section-title__main">お問い合わせ</h2>
                 <p class="contact__title-text">ご予約・お問い合わせはコチラ</p>
                 <div class="contact__button-layout">
-                  <a href="#" class="button">Contact&nbsp;us<span class="button-arrow2"></span><span class="button-arrow"></span> </a>
+                  <a href="contact-page.html" class="button">Contact&nbsp;us<span class="button-arrow2"></span><span class="button-arrow"></span> </a>
                 </div>
               </div>
               <div class="contact__top-button js-top-button">
@@ -466,7 +466,7 @@
                 </a>
               </li>
               <li class="footer-menu__item">
-                <a href="#" class="footer-menu__link-b">
+                <a href="contact-page.html" class="footer-menu__link-b">
                   <p class="footer-menu__logo-text">お問い合わせ</p>
                 </a>
               </li>
