--- a/src/contact-page.html
+++ b/src/contact-page.html
@@ -199,7 +199,7 @@
                   <input class="contact-form__inputs-text" type="tel" id="tel" name="tel" placeholder="000-0000-0000" required />
                 </dd>
               </dl>
-              <dl class="contact-form__label">
+              <dl class="contact-form__label-contact">
                 <dt>お問合せ項目<span>必須</span></dt>
                 <dd class="contact-form__container">
                   <div class="contact-form__check-box">
