--- a/src/contact-page.html
+++ b/src/contact-page.html
@@ -216,10 +216,10 @@
                   </div>
                 </dd>
               </dl>
-              <!-- <dl class="contact-form__label">
+              <dl class="contact-form__label">
                 <dt>キャンペーン</dt>
                 <dd>
-                  <div class="select">
+                  <div class="contact-form__select">
                     <select name="sample-select">
                       <option value="選択肢1">キャンペーン内容を選択</option>
                       <option value="選択肢2">選択肢2</option>
@@ -228,7 +228,13 @@
                     </select>
                   </div>
                 </dd>
-              </dl> -->
+              </dl>
+              <dl class="contact-form__label">
+                <dt>お問合せ内容<span>必須</span></dt>
+                <dd>
+                  <textarea name="問い合わせ" class="form-textarea"></textarea>
+                </dd>
+              </dl>
             </div>
           </form>
         </div>
