--- a/src/contact-page.html
+++ b/src/contact-page.html
@@ -221,10 +221,10 @@
                 <dd>
                   <div class="contact-form__select">
                     <select name="sample-select">
-                      <option value="選択肢1">キャンペーン内容を選択</option>
-                      <option value="選択肢2">選択肢2</option>
-                      <option value="選択肢3">選択肢3</option>
-                      <option value="選択肢4">選択肢4</option>
+                      <option value="キャンペーン内容を選択">キャンペーン内容を選択</option>
+                      <option value="ダイビング講習">ダイビング講習</option>
+                      <option value="ファンデイビング">ファンデイビング</option>
+                      <option value="体験ダイビング">体験ダイビング</option>
                     </select>
                   </div>
                 </dd>
