--- a/src/thanks-page.html
+++ b/src/thanks-page.html
@@ -173,14 +173,26 @@
           <span>
             <a href="./"><span>TOP</span></a>
           </span>
-          <span>お問い合わせ</span>
+          <span>
+            <a href="./"><span>お問い合わせ</span></a>
+          </span>
+          <span>送信完了</span>
         </div>
       </div>
-      <!--お問い合わせ-->
-
+      <!--サンクス-->
+      <section id="thanks-page" class="thanks-pagee thanks-page-top">
+        <div class="thanks-page__inner inner">
+          <div class="thanks-page__box">
+            <div class="thanks-page__title">お問い合わせ内容を送信完了しました。</div>
+            <div class="thanks-page__text">
+              このたびは、お問い合わせ頂き<br class="md-show" />誠にありがとうございます。<br class="md-show" /><br class="md-none">お送り頂きました内容を確認の上、<br class="md-show" />3営業日以内に折り返しご連絡させて頂きます。<br class="md-show" /><br class="md-none">また、ご記入頂いたメールアドレスへ、<br class="md-show" />自動返信の確認メールをお送りしております。
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!--フッター-->
-    <footer class="footer contact-page__footer-top js-footer">
+    <footer class="footer thanks-page__footer-top js-footer">
       <div class="footer__inner inner">
         <div class="footer__title footer-title">
           <a href="#" class="footer-title__name-layout">
