サイトマップ追加

--- a/src/faq-page.html
+++ b/src/faq-page.html
@@ -369,7 +369,7 @@
               <li class="footer-menu__item-text-b"><a href="#">体験ダイビング</a></li>
               <li class="footer-menu__item-text-b"><a href="#">ファンダイビング</a></li>
             </ul>
-            <ul class="footer-menu__items-b">
+            <ul class="footer-menu__items-c">
               <li class="footer-menu__item">
                 <a href="faq-page.html" class="footer-menu__link-a">
                   <p class="footer-menu__logo-text">よくある質問</p>
